@startuml

class Company{
-String designation
+getTestTypeStore()
+getParameterCategoryStore()
}

class CreateTestTypeUI{
}

class CreateTestTypeController{
+boolean createTestType(code,description,collecting method,selectedParameterCategoriesList)
+boolean saveTestType()
+List<ParameterCategoryDto> getParameterCategories()
}

class TestType{
-String code
-String description
-String collectingMethod
-List<ParameterCategories> listOfParameterCategories
+TestType(code,description,collectingMethod,listOfParameterCategories)
}

class TestTypeStore{
+createTestType(code,description,collecting method,selectedParameterCategoriesList)
+validateTestType(testType)
+addTestType(testType)
+saveTestType((testType)
}

class ParameterCategoryStore{
+List<ParameterCategory> getParameterCategoryList()
+ParameterCategory getParameterCategorybyCode()
}

class ParameterCategoryMapper{
+List<ParameterCategoryDto> toDto (List<ParameterCategory> parameterCategories)
+ParameterCategoryDto toDto(ParameterCategory parameterCategory
}


class ParameterCategoryDto{
+ String name
+ String code
+ ParameterCategoryDto(code,name)
}

class ParameterCategory{
+ String name
+ String code
}

CreateTestTypeUI ..> CreateTestTypeController
CreateTestTypeUI ..> ParameterCategoryDto
CreateTestTypeController ..> Company
CreateTestTypeController ..> TestTypeStore
CreateTestTypeController ..> ParameterCategoryStore
CreateTestTypeController ..> ParameterCategoryDto
CreateTestTypeController ..> ParameterCategory
CreateTestTypeController ..> TestType
CreateTestTypeController ..> ParameterCategoryMapper
Company"1"--> "1" TestTypeStore : uses
Company"1"--> "1" ParameterCategoryStore : uses
TestTypeStore "1"-->"*" TestType : conducts
ParameterCategoryMapper ..> ParameterCategoryDto
ParameterCategoryMapper ..> ParameterCategory
ParameterCategoryStore "1"--> "*"ParameterCategory : adopts
TestType "*"--"1..*" ParameterCategory : has a set of >
@enduml